[package]
authors = [
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to Cortex-M processors"
documentation = "https://docs.rs/cortex-m"
keywords = ["arm", "cortex-m", "register", "peripheral"]
license = "MIT OR Apache-2.0"
name = "cortex-m"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-m"
version = "0.7.4"
edition = "2021"
rust-version = "1.77"
links = "cortex-m"  # prevent multiple versions of this crate to be linked together

[dependencies]
bitfield = "0.13.2"

[dependencies.serde]
version = "1"
features = [ "derive" ]
optional = true

[features]
cm7 = []
cm7-r0p1 = ["cm7"]
linker-plugin-lto = []
std = []

semih = []

panic-semih = ["semih"]
panic-itm = []
panic-exit = []

atomic-cas = []
multi-core = ["atomic-cas"]

jlink-quirks = []

[package.metadata.docs.rs]
targets = [
    "thumbv8m.main-none-eabihf",
    "thumbv6m-none-eabi",
    "thumbv7em-none-eabi",
    "thumbv7em-none-eabihf",
    "thumbv7m-none-eabi",
    "thumbv8m.base-none-eabi",
    "thumbv8m.main-none-eabi"
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(cortex_m)', 'cfg()'] }
